# microarch_lab_conversions

./: README.md  pixi.toml  pyproject.toml
core/: conversion_engine.py
educational/: __init__.py  learning_pathway_cli.py  learning_pathways.py  test_learning_pathways.py
